Added more recipes with more details.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,21 @@
-<h1>Lasagna</h1>
+<h1>Cake</h1>
+<img src="../images/lasagna.jpg" alt="Lasagna">
+
+<h2>Description</h2>
+<p>This layered with a rich meat sauce and a creamy parmesan white sauce, plus the perfect amount of mozzarella cheese!
+    No ricotta cheese needed. </p>
+
+<h2>Ingredients</h2>
+<ul>
+    <li>Butter</li>
+    <li>Flour</li>
+    <li>Milk</li>
+    <li>Parmesan cheese</li>
+</ul>
+
+<h2>Steps</h2>
+<ol>
+    <li>Make lasagna</li>
+    <li>...</li>
+    <li>Profit</li>
+</ol>
